# inastemp

./: .Dockerfile  .Dockerfile_RISCV  .gitlab-ci.yml  CMakeLists.txt  README.md
CMakeModules/: GetARMCpuInfos.cmake  GetCompilerInfos.cmake  GetCpuInfos.cmake  GetX86CpuInfos.cmake  getARMCpuInfos.cpp  getCpuInfos.cpp
CMakeModules/ALTIVEC/: checkALTIVECpe.cpp
CMakeModules/AVX512COMMON/: checkAVX512COMMONpe.cpp
CMakeModules/AVX512KNL/: compileTestAVX512KNL.cpp
CMakeModules/AVX512SKL/: compileTestAVX512SKL.cpp
CMakeModules/RISCV/: compileTestRISCV.cpp
CMakeModules/SSE3/: checkSSE3pe.cpp
CMakeModules/SSE41/: checkSSE41pe.cpp
CMakeModules/SSE42/: checkSSE42pe.cpp
CMakeModules/SSSE3/: checkSSSE3pe.cpp
CMakeModules/SVE/: compileTestSVE.cpp
CMakeModules/SXA/: compileTestSXA.cpp
Examples/: CMakeLists.txt
Examples/Exp/: CMakeLists.txt  main.cpp
Examples/Gemm/: CMakeLists.txt  main.cpp
Examples/ParticlesWithBranch/: CMakeLists.txt  main.cpp
Examples/PerformanceModel/: CMakeLists.txt  perfmodel.cpp
Extra/: remez.sce
Patterns/: CMakeLists.txt  mulArrays2L.cpp  sumArrays1L.cpp
Src/: CMakeLists.txt  InastempCompileConfig.h.cmake  InastempConfig.h.cmake  InastempStaticConfig.h
Src/ALTIVEC/: InaALTIVECOperators.hpp  InaVecALTIVECDouble.hpp  InaVecALTIVECFloat.hpp
Src/AVX/: InaAVXOperators.hpp  InaVecAVXDouble.hpp  InaVecAVXFloat.hpp
Src/AVX2/: InaAVX2Operators.hpp  InaVecAVX2Double.hpp  InaVecAVX2Float.hpp
Src/AVX512COMMON/: InaAVX512COMMONOperators.hpp  InaVecAVX512COMMONDouble.hpp  InaVecAVX512COMMONFloat.hpp
Src/AVX512KNL/: InaAVX512KNLOperators.hpp  InaVecAVX512KNLDouble.hpp  InaVecAVX512KNLFloat.hpp
Src/AVX512SKL/: InaAVX512SKLOperators.hpp  InaVecAVX512SKLDouble.hpp  InaVecAVX512SKLFloat.hpp
Src/Common/: InaBlas.hpp  InaFastExp.hpp  InaMath.hpp  InaMemory.hpp  InaUtils.hpp  InaVecInterface.hpp
Src/FLOPS/: InaVecFLOPS.hpp
Src/RISCV/: InaVecRISCVDouble.hpp  InaVecRISCVFloat.hpp
Src/SCALAR/: InaVecSCALARDouble.hpp  InaVecSCALARFloat.hpp
Src/SSE3/: InaSSE3Operators.hpp  InaVecSSE3Double.hpp  InaVecSSE3Float.hpp
Src/SSE41/: InaVecSSE41Double.hpp  InaVecSSE41Float.hpp
Src/SSE42/: InaSSE42Operators.hpp  InaVecSSE42Double.hpp  InaVecSSE42Float.hpp
Src/SSSE3/: InaSSSE3Operators.hpp  InaVecSSSE3Double.hpp  InaVecSSSE3Float.hpp
Src/SVE/: InaVecSVEDouble.hpp  InaVecSVEFloat.hpp
Src/SXA/: InaVecSVEDouble.hpp  InaVecSVEFloat.hpp  InaVecSXADouble.hpp  InaVecSXAFloat.hpp
UTests/: CMakeLists.txt  core-test-all-static.hpp  core-test-all.hpp  core-test-blas.hpp  flops-test-all.hpp  just-compile.cpp  test-all-static.cpp  test-all.cpp  test-blas.cpp  test-flops.cpp  test-ifelse.cpp  test-memo.cpp
